syntax = "proto3";

package api;
option go_package = "github.com/scryinfo/dp/api/go_out/api";

enum Status {
    OK = 0;
    ERROR = 1;
}

service KeyService {
    //Generate address
    rpc GenerateAddress (AddressParameter) returns (AddressInfo) {
    }
    //Proof address 
    rpc VerifyAddress (AddressParameter) returns (AddressInfo) {
    }
    //Content encryption
    rpc ContentEncrypt (CipherParameter) returns (CipherText) {
    }
    //Content decryption
    rpc ContentDecrypt (CipherParameter) returns (CipherText) {
    }
    //Info Signature
    rpc Signature (CipherParameter) returns (CipherText) {
    }
    //Input keystore file content
    rpc import_keystore (ImportParameter) returns (AddressInfo) {

    }
}

message ImportParameter {
    string content_password = 1;
    string import_psd= 2;
    bytes content = 3;
}

message AddressParameter {
    string password = 1;
    string address = 2;
}

message AddressInfo {
    Status status = 1;
    string address = 2;
    string msg = 3;
}

message CipherParameter {
    string password = 1;
    string address = 2;
    bytes message = 3;
}

message CipherText {
    Status status = 1;
    bytes data = 2;
    string msg = 3;
}